* added JspAwareRequestContext as subclass of RequestContext, populated from JSP PageContext (and aware of page scope)
* Spring JSP tags work outside DispatcherServlet too, falling back to root WebApplicationContext and JSTL/request locale
* AbstractJasperReportsView sets content length header for IE when writing to the OutputStream (like AbstractPdfView)


Changes in version 1.1.3 (12.12.2004)
-------------------------------------

Package org.springframework.aop
* introduced ProxyMethodInvocation interface, to let DelegatingIntroductionInterceptor access proxies in a clean fashion
* fixed bug in Cglib2AopProxy where proxy creation failed in case of unadvised target method calls during constructor

Package org.springframework.beans
* BeanWrapperImpl automatically registers a default ResourceArrayPropertyEditor
* fixed reported bean class in BeanWrapperImpl to always point to the root class at the top of the path
* deprecated setting of a nested path without specifying the root object in BeanWrapperImpl
* added CustomCollectionEditor, by default registered to convert between Set, SortedSet and List (when necessary)
* fixed TypeMismatchException constructor to avoid NullPointerException in case of null as required type
* added "getPropertyDescriptors" method to BeanUtils, as alternative to retrieving the descriptors via a BeanWrapper
* added "fileEncoding" and "propertiesPersister" properties to PropertyResourceConfigurer
* added hooks for custom conversion of read-in property values to PropertyResourceConfigurer (e.g. for decryption)
* fixed PropertyPlaceholderConfigurer to avoid StringBuffer.indexOf(String), which is just available on JDK >=1.4
* moved "ignoreDependencyType" method from ConfigurableBeanFactory interface down to ConfigurableListableBeanFactory
* moved management of ignored dependency types from AbstractBeanFactory down to AbstractAutowireCapableBeanFactory