@@ -110,8 +110,8 @@ public abstract class AbstractMetadataAssemblerTests extends AbstractJmxAssemble
 		assertEquals("Currency Time Limit should be 15", new Integer(15), desc.getFieldValue("currencyTimeLimit"));
 		assertEquals("Persist Policy should be OnUpdate", "OnUpdate", desc.getFieldValue("persistPolicy"));
 		assertEquals("Persist Period should be 200", new Integer(200), desc.getFieldValue("persistPeriod"));
-		assertEquals("Persist Location should be foo", "foo", desc.getFieldValue("persistLocation"));
-		assertEquals("Persist Name should be bar", "bar", desc.getFieldValue("persistName"));
+		assertEquals("Persist Location should be foo", "./foo", desc.getFieldValue("persistLocation"));
+		assertEquals("Persist Name should be bar", "bar.jmx", desc.getFieldValue("persistName"));
 	}
 
 	public void testAttributeDescriptor() throws Exception {
